# Rust-BlockChainProject

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BlockchainViewer.css  BlockchainViewer.jsx  ProductList.css  ProductList.jsx  TransactionHistory.css  TransactionHistory.jsx  WalletConnection.css  WalletConnection.jsx
